Release v0.8.0
